# LFU-cache

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_LFU_cache.cpp  main_perfect_cache.cpp
include/: LFU_cache.hpp  cache.hpp  perfect_cache.hpp
source/: LFU_cache.cpp  cache.cpp  perfect_cache.cpp
